retrieving marks by groups added
