# models/educationalGradeModel.js
@@ -17,4 +17,27 @@ const getStudentPercentil = async (student_id) => {
     return rows[0];
 }
 
-module.exports = {getStudentGPA, getStudentPercentil};
+const getMarksByGroupId = async (group_id) => {
+    const query = `SELECT s.id   AS student_id,
+                          s.name,
+                          s.secondname,
+                          s.lastname,
+                          m.lesson_id,
+                          m.mark,
+                          sub.id AS subject_id
+                   FROM groups g
+                            JOIN
+                        students s ON g.id = s.group_id
+                            JOIN
+                        mark m ON s.id = m.student_id
+                            JOIN
+                        lessons l ON m.lesson_id = l.id
+                            JOIN
+                        subjects sub ON l.subject_id = sub.id
+                   WHERE g.id = $1;
+    `;
+    const {rows} = await dbPool.query(query, [group_id]);
+    return rows;
+};
+
+module.exports = {getStudentGPA, getStudentPercentil, getMarksByGroupId};
